// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TabBar favorites action - behavior should cap display at MAX when number exceeds maximum 1`] = `
<FavoritesIconBadge
  favoritesCount={9999}
  showWishlistItemsCountBadge={true}
  widgetSettings={
    {
      "showCounter": true,
    }
  }
>
  <CounterBadge
    className="sg-u2omqm-root theme__tab-bar__favorites-icon-badge"
    count={9999}
    max={999}
    showCount={true}
  >
    <ForwardRef(Typography)
      className="theme__tab-bar__favorites-icon-badge theme__badge sg-16849n5-root-root"
      component="div"
      fontWeight="bold"
      variant="caption"
    >
      <div
        className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-wz91dx-Typography-root-Typography-caption-Typography-fontWeightBold-root-root"
      >
        999+
      </div>
    </ForwardRef(Typography)>
  </CounterBadge>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action - behavior should show count when number is changed 1`] = `
<FavoritesIconBadge
  favoritesCount={99}
  showWishlistItemsCountBadge={true}
  widgetSettings={
    {
      "showCounter": true,
    }
  }
>
  <CounterBadge
    className="sg-u2omqm-root theme__tab-bar__favorites-icon-badge"
    count={99}
    max={999}
    showCount={true}
  >
    <ForwardRef(Typography)
      className="theme__tab-bar__favorites-icon-badge theme__badge sg-16849n5-root-root"
      component="div"
      fontWeight="bold"
      variant="caption"
    >
      <div
        className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-wz91dx-Typography-root-Typography-caption-Typography-fontWeightBold-root-root"
      >
        99
      </div>
    </ForwardRef(Typography)>
  </CounterBadge>
</FavoritesIconBadge>
`;

exports[`TabBar favorites action should render exact number 1`] = `
<Provider
  store={
    {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <WithWidgetSettings(Connect(FavoritesIconBadge))>
    <Connect(FavoritesIconBadge)
      widgetSettings={{}}
    >
      <FavoritesIconBadge
        dispatch={[Function]}
        favoritesCount={1}
        showWishlistItemsCountBadge={true}
        widgetSettings={{}}
      >
        <CounterBadge
          className="sg-u2omqm-root theme__tab-bar__favorites-icon-badge"
          count={1}
          max={999}
          showCount={true}
        >
          <ForwardRef(Typography)
            className="theme__tab-bar__favorites-icon-badge theme__badge sg-16849n5-root-root"
            component="div"
            fontWeight="bold"
            variant="caption"
          >
            <div
              className="engage__typography engage__typography_caption theme__tab-bar__favorites-icon-badge theme__badge sg-wz91dx-Typography-root-Typography-caption-Typography-fontWeightBold-root-root"
            >
              1
            </div>
          </ForwardRef(Typography)>
        </CounterBadge>
      </FavoritesIconBadge>
    </Connect(FavoritesIconBadge)>
  </WithWidgetSettings(Connect(FavoritesIconBadge))>
</Provider>
`;
